Switched to new style.

--- a/index.html
+++ b/index.html
@@ -1,62 +1,59 @@
 <!DOCTYPE html>
-<html>
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
-	<link rel="icon" type="image/jpg" href="icon.jpg">
-	<link rel="stylesheet" type="text/css" href="css.css">
+	<link href="https://fonts.googleapis.com/css?family=Arvo|Lato|Open+Sans" rel="stylesheet"> 
+	<link rel="stylesheet" type="text/css" href="css/softstyle.css">
 	<title>Andrew Riggs</title>
 </head>
 
 <body>
-	<div class="container">
-		<div class="header">
-			<span id="headerTitle"><h1>Andrew Riggs</h1></span>
-		</div>
+    <div class="outerShell">
 		
-		<div id="headerIcon">
-			<img src="furb.jpg" style="max-height:100%;max-width:100%;"></img>
-		</div>
-		
-		<div class="splash">
-		</div>
-		
-		<div class="content">
-		</div>
-		
-		<div class="sidebarContainer">
-			<div class="sidebar">
-				<a class="sidebarLink" style="display:block" href="index.html">
-					<div class="sub-item">
-						<h2 class="sidebarText">Home</h2>
+		<div class="mainHeader">
+			<div class="mainHeaderTop">
+				<h1 class="mainHeaderText">
+					Andrew Riggs
+				</h1>
+
+				<h1 class="mainHeaderSting">
+					Software Developer <i>(In Progress)</i>
+				</h1>
+
+			</div>
+
+			<div class="mainHeaderBottom">
+				<div class="headerMenu">
+					<div class="menuItem">
+						<h3 class="menuText">Home</h3>
 					</div>
-				</a>
-				<a class="sidebarLink" style="display:block" href="about.html">
-					<div class="sub-item">
-						<h2 class="sidebarText">About</h2>
+	
+					<div class="menuItem">
+						<h3 class="menuText">About</h3>
 					</div>
-				</a>
-				<a class="sidebarLink" style="display:block" href="resume.html">
-					<div class="sub-item">
-						<h2 class="sidebarText">Resume</h2>
-					</div>
-				</a>
-				<a class="sidebarLink" style="display:block" href="blog.html">
-					<div class="sub-item">
-						<h2 class="sidebarText">Blog</h2>
-					</div>
-				</a>
 				
-				<address id="contactInfo">
-				<span style="font-size: 1.3em">Contact Info</span>
-				<hr>
-				Email at:<br>
-				<a id="mail" href="mailto:riggs.andrew@gmail.com" target="_blank">riggs.andrew@gmail.com</a><br><br>
-				</address>
+					<div class="menuItem">
+						<h3 class="menuText">Resume</h3>
+					</div>
+
+					<div class="menuItem">
+						<h3 class="menuText">Blog</h3>
+					</div>
+				</div>
 			</div>
 		</div>
-	
-	</div>
-</body>
 
-</html>
+		<div class="mainShell">
+			<div class="splashPane">
+			</div>	
+		</div>
+		
+		<div class="mainFooter">
+			<div class="mainFooterSeperator">
+				<hr class="headLine">
+				<hr class="headLine">
+			</div>
+
+		</div>
+    </div>
+</body>
